Allow new elements to be created
They will be selected by default and it is possible to modify their
properties.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,3 +25,11 @@
 
     margin-bottom: 0.5em;
 }
+
+.element {
+    position: relative;
+}
+
+.selected.element {
+    border: 0.1em dashed #555;
+}
