--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,8 +26,18 @@
     margin-bottom: 0.5em;
 }
 
+.elements {
+    width: 100%;
+    height: 100%;
+}
+
 .element {
     position: relative;
+}
+
+.element table {
+    width: 100%;
+    height: 100%;
 }
 
 .selected.element {
