--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,8 @@
 }
 
 #workspace {
+    position: relative;
+
     background: #efefef;
 }
 
@@ -26,7 +28,9 @@
     margin-bottom: 0.5em;
 }
 
-.elements {
+.layer {
+    position: absolute;
+
     width: 100%;
     height: 100%;
 }
