--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,7 @@
 }
 
 #workspace {
+    overflow: auto;
     position: relative;
 
     background: #efefef;
@@ -28,15 +29,8 @@
     margin-bottom: 0.5em;
 }
 
-.layer {
-    position: absolute;
-
-    width: 100%;
-    height: 100%;
-}
-
 .element {
-    position: relative;
+    position: absolute;
 }
 
 .element table {
